fix: debugging layout shift

--- a/css/about.css
+++ b/css/about.css
@@ -1,6 +1,3 @@
-.container {
-    max-width: 900px;
-}
 
 section {
     margin-bottom: 80px;
