--- a/css/pricing.css
+++ b/css/pricing.css
@@ -144,4 +144,5 @@
     margin: 0;
     color: #b388ff;
     font-size: 0.95rem;
+    text-align: left;
 }
